// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VitalsForm > RTL snapshot tests > matches snapshot in LTR mode 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-6"
    >
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-weight"
        >
          Weight
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Weight"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-weight"
            max="500"
            min="0.5"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            kg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-height"
        >
          Height
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Height"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-height"
            max="300"
            min="20"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            cm
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-systolic"
        >
          Blood Pressure
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Systolic"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-systolic"
            max="300"
            min="40"
            placeholder="Sys"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-lg font-bold text-muted-foreground"
          >
            /
          </span>
          <input
            aria-label="Diastolic"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-diastolic"
            max="200"
            min="20"
            placeholder="Dia"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            mmHg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-temperature"
        >
          Temperature
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Temperature"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-temperature"
            max="47"
            min="25"
            placeholder="36.5"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            °C
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VitalsForm > RTL snapshot tests > matches snapshot in RTL mode 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-6"
    >
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-weight"
        >
          Weight
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Weight"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-weight"
            max="500"
            min="0.5"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            kg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-height"
        >
          Height
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Height"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-height"
            max="300"
            min="20"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            cm
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-systolic"
        >
          Blood Pressure
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Systolic"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-systolic"
            max="300"
            min="40"
            placeholder="Sys"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-lg font-bold text-muted-foreground"
          >
            /
          </span>
          <input
            aria-label="Diastolic"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-diastolic"
            max="200"
            min="20"
            placeholder="Dia"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            mmHg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-temperature"
        >
          Temperature
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-label="Temperature"
            class="w-full rounded-lg border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-temperature"
            max="47"
            min="25"
            placeholder="36.5"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            °C
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
